# ktrip-bot

./: README.md  kto_data.db  main.py  pyproject.toml
jupyter/: 01_fetch_trip_data.ipynb  02-fetch_naver_blog.ipynb  10-basic.ipynb  README.md
vs/: chroma.sqlite3
